--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv-"X-UA-Compatible" content="IE=edge">
 <title>react-sortable</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="app.css" rel="stylesheet" type="text/css">
 </head>
