Update package description

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,7 @@ a:hover {
     <div class="row text-center">
         <div class="col-xs-12" style="margin-bottom: 1em;">
             <h1 class="page-title"><a href="https://github.com/cheton/react-sortable">react-sortable</a></h1>
-            <h3>A React component using Sortable (<a href="https://github.com/RubaXa/Sortable">https://github.com/RubaXa/Sortable</a>).</h3>
+            <h3>A React component built on top of Sortable (<a href="https://github.com/RubaXa/Sortable">https://github.com/RubaXa/Sortable</a>).</h3>
         </div>
         <div class="col-xs-12">
             <a class="btn btn-default btn-lg" href="https://github.com/cheton/react-sortable" role="button">View on GitHub</a>
