--- a/examples/index.html
+++ b/examples/index.html
@@ -36,6 +36,6 @@ a:hover {
         </div>
     </div>
     <div id="container"></div>
-    <script src="app.bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
