--- a/examples/index.html
+++ b/examples/index.html
@@ -37,5 +37,5 @@
         <h3>A React component built on top of Sortable (<a href="https://github.com/RubaXa/Sortable">https://github.com/RubaXa/Sortable</a>).</h3>
         <div id="container"></div>
     </div>
-<script type="text/javascript" src="bundle.js?9b30c87c1e2991067dfd"></script></body>
+</body>
 </html>
